# watcha-clone-backend

./: .env  .gitignore  db.sqlite3  pyproject.toml  render.yaml
common/: models.py
config/: settings.py  urls.py
coupons/: admin.py  models.py  serializer.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_owner.py  0003_rename_owner_coupon_user.py  0004_rename_user_coupon_username.py  0005_rename_username_coupon_user.py  0006_rename_user_coupon_name.py  0007_rename_name_coupon_user.py
lists/: admin.py  models.py  serializers.py  urls.py  views.py
lists/migrations/: 0001_initial.py
portfolio-frontend/src/: api.ts  router.tsx
portfolio-frontend/src/components/: Banner.tsx  FirstPageRoot.tsx  Footer.tsx  Header.tsx  Series.tsx  TabList.tsx
portfolio-frontend/src/css/: swiper.css
portfolio-frontend/src/routes/: FirstPage.tsx  LoginPage.tsx  MyPage.tsx  NotFound.tsx  SeriesDetail.tsx  SettingPage.tsx  (+1 more)
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_review_series.py
series/: admin.py  models.py  serializers.py  urls.py  views.py
series/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name_alter_user_username.py
videos/: admin.py  models.py  serializers.py  urls.py  views.py
videos/migrations/: 0001_initial.py  0002_alter_actor_photo_url_alter_director_photo_url.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py  0002_alter_wishlist_user.py
(+1 files in other folders)
